--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "express-session": "^1.17.1",
     "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/custom-forms": "^0.2.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -29,7 +33,6 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "prettier": "^2.0.5",
     "prettier-babel": "^1.0.0",
-    "tailwindcss": "^1.4.6",
-    "@tailwindcss/custom-forms": "^0.2.1"
+    "tailwindcss": "^1.4.6"
   }
 }
